--- a/frontend/public/이미지동영상태그.html
+++ b/frontend/public/이미지동영상태그.html
@@ -22,10 +22,11 @@
 <img src="C:\Users\504\eclipse-workspace\frontend\public\야옹.web"/>
 	<h6>상대경로 : 현재 문서와 같은 폴더 내 사진일때 </h6>
 <img src="야옹.webp"/>
-  	<!-- <h6>상대경로 : 현재 문서와 같은 폴더 내 사진일때 </h6>
-  	<img scr="./이미지/야옹webp"/>
-  	<h6> 상대경로: 
-  	 -->
+  	<h6>상대경로 : 현재 문서와 같은 폴더 내 사진일때 </h6>
+  	<img src="./img/야옹.webp"/>
+  	<h6> 상대경로: 현재 문서의 상위 폴더 내 사진일때</h6>
+  	<img src="../이미지/야옹.webp"/>
+  	 
   	 <audio controls>
   	 <source src="소리.mp3">
   	 </audio controls>
@@ -33,7 +34,7 @@
   	 <source src="비디오.mp4">
   	 </video>
   	 <iframe width="560" height="315" src="https://www.youtube.com/embed/DpnFY8z_X6Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12693.543726134027!2d126.853656!3d37.309685!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b6f26eca4e801%3A0xcc760a7a473e93bf!2z7ZWc64yA7JWe7Jet!5e0!3m2!1sko!2skr!4v1686129333636!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </body>
 </html>
