--- a/frontend/public/과제/과제4.html
+++ b/frontend/public/과제/과제4.html
@@ -6,26 +6,27 @@
 </head>
 <body>
 	<table border="1">
-	<tr>
-	<td colspan="3">1</td><td rowspan="3">2</td><td>3</td><td  rowspan="4">4</td><td colspan="2" rowspan="2">5</td>
-	</tr>
-	<tr>
-	<td colspan="2">6</td><td>7</td><td>8</td><td rowspan="4"><td><td></td><td></td><td></td><td></td>
-	</tr>
-	<tr>
-	<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-	</tr>
-	<tr>
-	<td></td><td></td><td>17</td><td>18</td><td>19</td><td>20</td><td></td><td></td>
-	</tr>
-	<tr>
-	<td></td><td></td><td>21</td><td></td><td></td><td></td><td></td><td></td>
-	</tr>
-	<tr>
-	<td>23</td><td></td><td>24</td><td colspan="2">25</td><td></td><td></td><td></td><td>26</td>
-	</tr>
-	
-	
+		<tr><!-- 1행 -->
+			<td colspan="3">1</td> <td rowspan="3">2</td> <td>3</td> <td rowspan="5">4</td> <td rowspan="2" colspan="2">5</td>      
+		</tr>
+		<tr><!-- 2행 -->
+			<td colspan="2">6</td> <td>7</td> <td rowspan="3">8</td>
+		</tr>
+		<tr><!-- 3행 -->
+			<td>9</td> <td colspan="2">10</td> <td rowspan="2">11</td> <td rowspan="4">12</td>
+		</tr>
+		<tr><!-- 4행 -->
+			<td rowspan="3">13</td> <td>14</td> <td colspan="2">15</td>
+		</tr>
+		<tr><!-- 5행 -->
+			<td rowspan="3">16</td> <td>17</td> <td>18</td> <td rowspan="2">19</td> <td>20</td>
+		</tr>
+		<tr><!-- 6행 -->
+			<td colspan="2">21</td> <td rowspan="2" colspan="2">22</td>
+		</tr>
+		<tr><!-- 7행 -->
+			<td>23</td> <td>24</td> <td colspan="2">25</td> <td>26</td>
+		</tr>
 	</table>
 </body>
 </html>
