--- a/frontend/public/css/4_div와span.html
+++ b/frontend/public/css/4_div와span.html
@@ -19,7 +19,10 @@
 		span, a등등
 		
 	display 속성 
-		1. display : inline; 기본값으로 사용되는 태그 
+		1. display: inline;			기본값으로 사용되는 태그 : span,a 등등
+		2. display: block;			기본값으로 사용되는 태그 : div,h,p,ul,ol,li 등등 
+		3. display: inline-block;	기본값으로 사용되는 태그 : button , input , select 등등 
+		4. display: none;		
 		
 
  -->
@@ -34,6 +37,8 @@
 	
 	<!-- 4. span 태그가  display: none; 숨김 -->
 	<div> 글자1 <span class="s4">안녕하세요</span> 글자2</div>
+	
+	
 	
 	<!-- 1. div 태그가 display : inline; -->
 	글자<div class="d1">안녕하세요</div>글자2
