--- a/frontend/public/css/6_flex1.html
+++ b/frontend/public/css/6_flex1.html
@@ -32,7 +32,7 @@
 	<div class="box" > box3</div>
 	</div>
 	
-	<h3>3. 하위요소 세로배치 뒤집기 flex-direction: row-reverse;</h3>
+	<h3>3. 하위요소 가로배치 뒤집기 flex-direction: row-reverse;</h3>
 	<div class="flex_box3" > box1 <!-- 상위요소 -->
 	
 	
