--- a/frontend/public/과제/3조_wep조별과제.html
+++ b/frontend/public/과제/3조_wep조별과제.html
@@ -28,7 +28,15 @@
                <li>고객지원</li>
                <li>AS신청</li>
                <li>이벤트/멤버쉽</li>
-               <li>전체상품</li>
+               <li>
+               	<select class="select">
+               		<option>전체상품</option>
+               		<option>완벽풀옵션</option>
+               		<option>기본풀옵션 </option>
+               		<option>기본베이직1 </option>
+               		<option>기본베이직2 </option>
+               	</select>
+               </li>
             </ul>    
       </div> <!-- 헤더메뉴 end -->   
    </div> <!-- 헤더 끝 -->
