--- a/frontend/public/과제/index.html
+++ b/frontend/public/과제/index.html
@@ -36,7 +36,7 @@
 		
 		<div id="content"><!-- 본문 시작 -->
 			<div><!-- 상단 본문 -->
-				<div>
+				<div class="">
 					<img src="img/icon1.png">
 				</div>
 				<div class="top_content">
