--- a/frontend/public/과제/index.html
+++ b/frontend/public/과제/index.html
@@ -34,27 +34,72 @@
 		
 		<img id="main_img" src=""><!-- 메인 이미지 -->
 		
-		<div id="content"><!-- 본문 시작 -->
-			<div><!-- 상단 본문 -->
-				<div class="">
+		<div id="content"><!-- 상단 본문 시작 -->
+			<a href="http://192.168.17.34:8080/frontend/%EA%B3%BC%EC%A0%9C/reservation.html">
+				<div class="top_content"> <!-- 상단 왼쪽 본문 -->
+					<div> <!-- 왼쪽 본문 아이콘 -->
 					<img src="img/icon1.png">
-				</div>
-				<div class="top_content">
-					<a>
-						<ul>
-							<li>예약안내</li>
+					</div> <!-- 왼쪽 본문 아이콘 끝 -->					
+					<div><!-- 왼쪽 본문 내용 -->
+						<ul class="top_text">
+							<li class="t1">예약안내</li>
 							<li>
 								스튜디오 대여는 사전에 인터넷 예약을
-								하셔야 합니다. 예약은 1일 이전까지 가능합니다.
+								하셔야 합니다. 예약은 1일 이전까지 가능합니다.								
 							</li>
 						</ul>
-					</a>
+					</div><!-- 왼쪽 본문 내용 끝 -->
+				</div> <!-- 상단 왼쪽 본문 끝 -->
+			</a>
+			<a>
+				<div class="top_content"> <!-- 상단 오른쪽 본문 -->
+					<div> <!-- 오른쪽 본문 아이콘 -->
+						<img src="img/icon2.png">
+					</div> <!-- 오른쪽 본문 아이콘 끝 -->
+						<div>
+							<ul class="top_text"><!-- 오른쪽 본문 내용 -->
+								<li class="t1">포토갤러리</li>
+								<li>
+									취업사진, 가족사진, 프로필 사진, 우정사진 등
+									개인 또는 단체가 이용할 수 있습니다.
+								</li>
+							</ul><!-- 오른쪽 본문 내용 끝 -->
+						</div>
+				</div> <!-- 상단 오른쪽 본문 끝 -->			
+			</a>
+		</div><!-- 상단 본문 끝 -->
+		<div class="under_c"><!-- 하단 본문 시작 -->
+			<div class="uc1"> <!-- 하단 본문 내용 -->
+				<div>
+					<ul>
+						<li><img src="img/image1.jpg"></li>
+						<li class="uc_t_h"><span>촬영 스튜디오</span></li>
+						<li class="uc1_text uc_t_h">카메라, 조명 등 촬영 장비 완비</li>
+					</ul>
 				</div>
-			</div> <!-- 상단 본문 끝 -->
-			<div>
-				포토 갤러리
-			</div>
-		</div><!-- 본문 끝 -->
+				<div>
+					<ul>
+						<li><img src="img/image2.jpg"></li>
+						<li class="uc_t_h"><span>촬영 스튜디오</span></li>
+						<li class="uc1_text uc_t_h">카메라, 조명 등 촬영 장비 완비</li>
+					</ul>
+				</div>
+				<div>
+					<ul>
+						<li><img src="img/image3.jpg"></li>
+						<li class="uc_t_h"><span>촬영 스튜디오</span></li>
+						<li class="uc1_text uc_t_h">카메라, 조명 등 촬영 장비 완비</li>
+					</ul>
+				</div>
+				<div>
+					<ul>
+						<li><img src="img/image4.jpg"></li>
+						<li class="uc_t_h"><span class="t2">촬영 스튜디오</span></li>
+						<li class="uc1_text uc_t_h">카메라, 조명 등 촬영 장비 완비</li>
+					</ul>
+				</div>
+			</div><!-- 하단 본문 내용 끝 -->
+		</div><!-- 하단 본문 끝 -->
 	</div><!-- 웹 전체내용end -->
 
 </body>
