--- a/frontend/public/과제/index.html
+++ b/frontend/public/과제/index.html
@@ -31,9 +31,9 @@
 				</ul>
 			</div><!-- 헤더메뉴 끝 -->
 		</div><!-- 헤더 끝 -->
-		
-		<img id="main_img" src=""><!-- 메인 이미지 -->
-		
+		<div class="main_img_space">
+			<img id="main_img" src=""><!-- 메인 이미지 -->
+		</div>
 		<div id="content"><!-- 상단 본문 시작 -->
 			<a href="http://192.168.17.34:8080/frontend/%EA%B3%BC%EC%A0%9C/reservation.html">
 				<div class="top_content"> <!-- 상단 왼쪽 본문 -->
@@ -100,6 +100,47 @@
 				</div>
 			</div><!-- 하단 본문 내용 끝 -->
 		</div><!-- 하단 본문 끝 -->
+		
+	<div id="footer">	<!--푸터-->
+		<div class="ft_context"> <!--푸터 본문-->
+			<div class="ft_left"> <!--푸터 좌측 배너-->
+				<ul class="ft_item">
+					<li class="ft_call">고객센터</li>
+					<li><h3>Tel: 1588-1588</h3></li>
+				</ul>
+			</div>  <!--푸터 좌측 배너 끝-->
+			<div class="ft_center"> <!--푸터 가운데 배너-->
+				<div class="ft_top">
+					<a href="#">회사소개</a> <span class="aline">|</span>
+					<a href="#">개인정보처리방침</a> <span class="aline">|</span>
+					<a href="#">이용약관</a> <span class="aline">|</span>
+					<a href="#">제휴안내</a> <span class="aline">|</span>
+			</div>
+				<ul class="ft_bottom">
+					<li class="ft_bot">주소: 경기도 용인시 수지구 점펄로 123 </li>
+					<li class="ft_bot">e-mail: Photo@korea.com</li>
+					<span class="ft_bot">COPYRIGHT ⓒ 2021 The 스튜디오. ALL RIGHTS RESERVED.</span>
+				</ul>
+			</div>	<!--푸터 가운데 배너 끝-->
+				<div class="ft_right"> <!--푸터 오른쪽 배너-->
+					<div class="ft_facebook">
+						<a href="https://ko-kr.facebook.com/">
+							<img src="img/facebook.png">
+						</a>
+					</div>
+					<div class="ft_blog">
+						<a href="https://section.blog.naver.com/BlogHome.naver?directoryNo=0&currentPage=1&groupId=0">
+							<img src="img/blog.png">
+						</a>
+					</div>
+					<div class="ft_instagram">
+						<a href="https://www.instagram.com/">
+							<img src="img/instagram.png">
+						</a>
+					</div>	
+				</div> <!--푸터 오른쪽 배너 끝-->
+			</div>	<!--푸터 본문 끝-->
+		</div> 	<!--푸터 끝  -->
 	</div><!-- 웹 전체내용end -->
 
 </body>
