박민재 황기준 조별과제

--- a/frontend/public/과제/index.html
+++ b/frontend/public/과제/index.html
@@ -16,7 +16,7 @@
 			<div><!-- 헤더메뉴 -->
 				<ul class="main_menu">
 					<li>
-						<a href="http://192.168.17.34:8080/frontend/%EA%B3%BC%EC%A0%9C/img/intro.html">
+						<a href="http://192.168.17.34:8080/frontend/%EA%B3%BC%EC%A0%9C/intro.html">
 							스튜디오 소개
 						</a>
 					</li>
@@ -43,7 +43,7 @@
 					<div><!-- 왼쪽 본문 내용 -->
 						<ul class="top_text">
 							<li class="t1">예약안내</li>
-							<li>
+							<li class="top_text_content">
 								스튜디오 대여는 사전에 인터넷 예약을
 								하셔야 합니다. 예약은 1일 이전까지 가능합니다.								
 							</li>
@@ -59,7 +59,7 @@
 						<div>
 							<ul class="top_text"><!-- 오른쪽 본문 내용 -->
 								<li class="t1">포토갤러리</li>
-								<li>
+								<li class="top_text_content"">
 									취업사진, 가족사진, 프로필 사진, 우정사진 등
 									개인 또는 단체가 이용할 수 있습니다.
 								</li>
