--- a/frontend/public/과제/intro.html
+++ b/frontend/public/과제/intro.html
@@ -88,7 +88,46 @@
 			</div><!-- 하단본문 끝 -->
 			</div>
 		</div><!-- 본문 끝 -->			
-		
+		<div id="footer">	<!--푸터-->
+			<div class="ft_context"> <!--푸터 본문-->
+				<div class="ft_left"> <!--푸터 좌측 배너-->
+					<ul class="ft_item">
+						<li class="ft_call">고객센터</li>
+						<li><h3>Tel: 1588-1588</h3></li>
+					</ul>
+				</div>  <!--푸터 좌측 배너 끝-->
+				<div class="ft_center"> <!--푸터 가운데 배너-->
+					<div class="ft_top">
+						<a href="#">회사소개</a> <span class="aline">|</span>
+						<a href="#">개인정보처리방침</a> <span class="aline">|</span>
+						<a href="#">이용약관</a> <span class="aline">|</span>
+						<a href="#">제휴안내</a> <span class="aline">|</span>
+				</div>
+					<ul class="ft_bottom">
+						<li class="ft_bot">주소: 경기도 용인시 수지구 점펄로 123 </li>
+						<li class="ft_bot">e-mail: Photo@korea.com</li>
+						<span class="ft_bot">COPYRIGHT ⓒ 2021 The 스튜디오. ALL RIGHTS RESERVED.</span>
+					</ul>
+				</div>	<!--푸터 가운데 배너 끝-->
+					<div class="ft_right"> <!--푸터 오른쪽 배너-->
+						<div class="ft_facebook">
+							<a href="https://ko-kr.facebook.com/">
+								<img src="img/facebook.png">
+							</a>
+						</div>
+						<div class="ft_blog">
+							<a href="https://section.blog.naver.com/BlogHome.naver?directoryNo=0&currentPage=1&groupId=0">
+								<img src="img/blog.png">
+							</a>
+						</div>
+						<div class="ft_instagram">
+							<a href="https://www.instagram.com/">
+								<img src="img/instagram.png">
+							</a>
+						</div>	
+					</div> <!--푸터 오른쪽 배너 끝-->
+				</div>	<!--푸터 본문 끝-->
+			</div> 	<!--푸터 끝  -->		
 	</div> <!-- 웹 전체내용  -->
 </body>
 </html>
