--- a/frontend/public/과제/reservation.html
+++ b/frontend/public/과제/reservation.html
@@ -16,7 +16,7 @@
 			<div><!-- 헤더메뉴 -->
 				<ul class="main_menu">
 					<li>
-						<a href="http://192.168.17.34:8080/frontend/%EA%B3%BC%EC%A0%9C/img/intro.html">
+						<a href="http://192.168.17.34:8080/frontend/%EA%B3%BC%EC%A0%9C/intro.html">
 							스튜디오 소개
 						</a>
 					</li>
