--- a/frontend/public/과제/burger_king/burger_king_menu.html
+++ b/frontend/public/과제/burger_king/burger_king_menu.html
@@ -91,12 +91,14 @@
 		</div><!-- 메뉴소개 본문 내용 끝 -->
 		<div class="burger_list"><!-- 버거 메뉴 리스트 -->
 			<div class="burger_item">
+				
 				<div class="burger_set">
 					<img src="img/special.png">
 				</div>
 				<div class="burger_set">
 					<p>DIABLO Ⅳ스페셜 세트</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 			<div class="burger_item">
 				<div class="burger_set">
@@ -105,6 +107,7 @@
 				<div class="burger_set">
 					<p>HELLO DIABLO Ⅳ 팩1</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 			<div class="burger_item">
 				<div class="burger_set">
@@ -113,6 +116,7 @@
 				<div class="burger_set">
 					<p>HELLO DIABLO Ⅳ 팩2</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 			<div class="burger_item">
 				<div class="burger_set">
@@ -121,6 +125,7 @@
 				<div class="burger_set">
 					<p>HELLO DIABLO Ⅳ 팩3</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 		</div><!-- 버거 메뉴 리스트 끝 -->
 	</div><!-- 메뉴소개 본문 끝 -->
