--- a/frontend/public/과제/burger_king/burger_king_menu2.html
+++ b/frontend/public/과제/burger_king/burger_king_menu2.html
@@ -99,6 +99,7 @@
 				<div class="burger_set">
 					<p>헬로 이나리우스 와퍼</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 			<div class="burger_item">
 				<div class="burger_set">
@@ -107,6 +108,7 @@
 				<div class="burger_set">
 					<p>헬로 릴리트 와퍼</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 			<div class="burger_item">
 				<div class="burger_set">
@@ -115,6 +117,7 @@
 				<div class="burger_set">
 					<p>치킨킹BLT</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 			<div class="burger_item">
 				<div class="burger_set">
@@ -123,6 +126,7 @@
 				<div class="burger_set">
 					<p>치킨킹</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 			<div class="burger_item">
 				<div class="burger_set">
@@ -131,6 +135,7 @@
 				<div class="burger_set">
 					<p>더블비프불고기버거</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 			<div class="burger_item">
 				<div class="burger_set">
@@ -139,6 +144,7 @@
 				<div class="burger_set">
 					<p>BLT오믈렛킹모닝</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 			<div class="burger_item">
 				<div class="burger_set">
@@ -147,6 +153,7 @@
 				<div class="burger_set">
 					<p>오믈렛킹모닝</p>
 				</div>
+				<img class="new_burger" src="img/new.png">
 			</div>
 		</div><!-- 버거 메뉴 리스트 끝 -->
 	</div><!-- 메뉴소개 본문 끝 -->
