버거킹 a태그 추가

--- a/frontend/public/과제/burger_king/burger_king_menu.html
+++ b/frontend/public/과제/burger_king/burger_king_menu.html
@@ -67,8 +67,8 @@
 		<div class="black_bar_space">
 			<div class="black_bar_text">
 				<ul>
-					<li><a href="#">HOME</a></li>
-					<li><a><span>&gt;</span>메뉴소개</a></li>
+					<li><a href="/frontend/%EA%B3%BC%EC%A0%9C/burger_king/burger_king_main.html">HOME</a></li>
+					<li><a href="#"><span>&gt;</span>메뉴소개</a></li>
 				</ul>
 			</div>
 		</div>
