--- a/frontend/public/js/0.과제/2_과제/과제2.html
+++ b/frontend/public/js/0.과제/2_과제/과제2.html
@@ -6,8 +6,16 @@
 <link href="과제2.css" rel="stylesheet">
 </head>
 <body>
+<div><!-- 회원가입 시작 -->
+	<input type="text" placeholder="id">
+	<input type="password" placeholder="pw">
+	<input type="button"> 
+</div>
+
+
+
+
+
 <script src="과제2.js" type="text/javascript"></script>
-
-
 </body>
 </html>
