--- a/frontend/public/js/1_기초문법/4_배열활용1.html
+++ b/frontend/public/js/1_기초문법/4_배열활용1.html
@@ -6,22 +6,22 @@
 </head>
 <body>
 
-	<h3> 학생 등록/삭제</h3>
-	학생명 : <input type="text" class="sname">
-	
-		<!-- onclick= "JS 코드" 또는 JS 함수명-->
-<!-- 	<input onclick="alert('클릭했네')" type="button" value="추가" /> -->
-	
+	<h3>학생 등록/삭제</h3>
+	학생명 :
+	<input type="text" class="sname">
+
+	<!-- onclick= "JS 코드" 또는 JS 함수명-->
+	<!-- 	<input onclick="alert('클릭했네')" type="button" value="추가" /> -->
+
 	<input onclick="추가함수()" type="button" value="추가" />
-	<input onclick="삭제함수()"type="button" value="삭제" />
-	
-	<h3> 학생 리스트</h3>
+	<input onclick="삭제함수()" type="button" value="삭제" />
+
+	<h3>학생 리스트</h3>
 	<ul class="slist">
-	
 	</ul>
 
 
-<!-- JS 호출 -->
+	<!-- JS 호출 -->
 <script src="4_배열활용1.js" type="text/javascript"></script>
 </body>
 </html>
