--- a/frontend/public/js/0.과제/2_과제/과제2.html
+++ b/frontend/public/js/0.과제/2_과제/과제2.html
@@ -6,10 +6,11 @@
 <link href="과제2.css" rel="stylesheet">
 </head>
 <body>
+
 <div><!-- 회원가입 시작 -->
-	<input type="text" placeholder="id">
-	<input type="password" placeholder="pw">
-	<input type="button"> 
+	<input type="text" placeholder="id" class="id">
+	<input type="password" placeholder="pw" class="password">
+	<input onclick="join()" type="button" value="회원가입"> 
 </div>
 
 
