--- a/frontend/public/js/0.과제/2_과제/과제2.html
+++ b/frontend/public/js/0.과제/2_과제/과제2.html
@@ -11,13 +11,13 @@
 		<div class='join'><!-- 회원가입 시작 -->
 			<input type="text" placeholder="id" class="id">
 			<input type="password" placeholder="pw" class="password">
-			<input onclick="join()" type="button" value="회원가입" class=""> 
+			<input onclick="join()" type="button" value="회원가입" class="btn"> 
 		</div>
 		
 		<div class='login'>
-			<input type="text" placeholder="id" class="iogin_id">
+			<input type="text" placeholder="id" class="login_id">
 			<input type="password" placeholder="pw" class="login_pw">
-			<input onclick="log_in" type="button" value="로그인 ">
+			<input onclick="log_in()" type="button" value="로그인 "class="btn">
 		</div>
 	</div>
 </div>
