--- a/frontend/public/js/0.과제/5_과제/연습장.html
+++ b/frontend/public/js/0.과제/5_과제/연습장.html
@@ -3,8 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link href="과제5.css" rel="stylesheet">
 </head>
 <body>
 
+	<!-- 게임 배경 -->
+	<div class="wrap">
+		<!-- 2. 유저 캐릭터구역 -->
+		<div class="userbox">
+		
+		</div>
+	
+	</div>
+
+
+
+<script src="연습장.js" type="text/javascript"></script>
 </body>
 </html>
